--- a/src/components/body/Body.css
+++ b/src/components/body/Body.css
@@ -1,9 +1,9 @@
-.goal {
+.information {
     background: #151f20;
 }
 
 .underline {
     width: 13em;
-    border: .2em solid #fff;
+    border: .2em solid black;
     margin: auto;
 }
